--- a/source/_posts/快速认识我.md
+++ b/source/_posts/快速认识我.md
@@ -1,11 +1,9 @@
 ---
 abbrlink: ''
-categories:
-- - 大学生涯
+categories: []
 cover: https://cdn.jsdelivr.net/gh/Ingo-Quach/webTuChuang@main/Qexo/25/3/1741505993656_a89240b2509a4dd8944b99d85197fc32.jpg
 date: '2025-03-09T15:31:01.426782+08:00'
-tags:
-- 操作系统
+tags: []
 title: 快速认识我
 top_single_background: https://cdn.jsdelivr.net/gh/Ingo-Quach/webTuChuang@main/Qexo/25/3/1741505993656_a89240b2509a4dd8944b99d85197fc32.jpg
 updated: '2025-03-09T15:45:08.092+08:00'
